# WarpCTL

./: .classpath  .gitignore  .project  README.md  project.clj
doc/: intro.md
extra/JADL-SDK/: INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  build.sh  configure  configure.ac
extra/JADL-SDK/include/: adl_functions.h  jadl_sdk.h
extra/JADL-SDK/src/: Makefile.am  Makefile.in  jadl_sdk.c
extra/JADL-SDK/swig/: Makefile.am  Makefile.in  jadl-sdk.i
extra/JNVAPI/: Makefile.am  Makefile.in  aclocal.m4  build.sh  config.h.in  configure  configure.ac
extra/JNVAPI/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
extra/JNVAPI/include/: jnvapi.h
extra/JNVAPI/libcfg/: Makefile.am  Makefile.in
extra/JNVAPI/src/: Makefile.am  Makefile.in
extra/JNVAPI/swig/: Makefile.am  Makefile.in  jnvapi.i
extra/JNVML/: Makefile.am  Makefile.in  README  aclocal.m4  build.sh  build64.sh  config.h.in~  configure  configure.ac
extra/JNVML/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
extra/JNVML/include/: jnvml.h  nvml_functions.h
extra/JNVML/m4/: ax_pkg_swig.m4
extra/JNVML/src/: Makefile.am  Makefile.in  jnvml.c
extra/JNVML/swig/: Makefile.am  Makefile.in  jnvml.i
extra/JNVML/win/: Makefile.am  Makefile.in
src/com/vnetpublishing/adl/: util.clj
src/com/vnetpublishing/nvml/: core.clj  util.clj
src/com/vnetpublishing/opencl/: core.clj  obj.clj
src/com/vnetpublishing/warpctl/: obj.clj
test/WarpCTL/: core_test.clj
